test/compile-fail/resolution/pub/in-crate-crate/top.rhdl
pub(in crate::crate) struct a {}
